js code & model update- get movie by genre
